@@ -1,3 +1,6 @@
+2015-04-10  Kirit Saelensminde  <kirit@felspar.com>
+ Added Django 1.8 to the test set, but the tests are not passing.
+
 2015-04-09  Kirit Saelensminde  <kirit@felspar.com>
  Add Django 1.7 to the test set.
 
